--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for App-SimpleScan-Plugin-Retry
 
+0.02  Tue Feb 28 13:02:42 PST 2006
+       Update to match quoting in App::SimpleScan.
+       Update to match automatic stacking of user agent code.
+
 0.01  Tue Nov 22 15:15:54 2005
        Initial release.
 
