--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for App-SimpleScan-Plugin-Retry
 
+1.01  Mon Apr 10 09:59:21 PDT 2006
+	- failed upload; trying again
+
 0.02  Tue Feb 28 13:02:42 PST 2006
        Update to match quoting in App::SimpleScan.
        Update to match automatic stacking of user agent code.
